fix: display table fixed and scrollbar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -263,11 +263,12 @@ body {
 
 // table header fixed
 .tableFixHead {
+  width: 100%;
   max-height: 600px;
   overflow-y: auto;
 }
 
-.table__header .table__cell {
+.table__header {
   position: sticky;
   top: 0px;
   z-index: 1;
